feat(board): gen board from game state

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 </head>
 <body class="page">
   <h1 id="count">0</h1>
+  <div id="board">
+  </div>
   <button id="add" class="auto">Increment</button>
   <button id="reset" class="auto">Reset</button>
   <button id="sub" class="auto">Decrement</button>
