--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,3 +7,20 @@
 button {
   max-width: 200px;
 }
+.board {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.row {
+  display: flex;
+  margin: 10px 0;
+}
+.cell {
+  margin: 0 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid grey;
+}
