--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 button {
   max-width: 200px;
