--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/affinity-css@latest/css/index.css">
   <link rel="stylesheet" href="/static/css/index.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
-  <title>Counter Live</title>
+  <title>Connect-4</title>
 </head>
 <body class="page">
-  <h1 id="count">0</h1>
-  <div id="board">
+  <h2 class="mt-5">Connect-4</h2>
+  <div id="board" class="mt-10">
   </div>
-  <button id="add" class="auto">Increment</button>
-  <button id="reset" class="auto">Reset</button>
-  <button id="sub" class="auto">Decrement</button>
   <script src="../static/js/counter.js"></script>
 </body>
 </html>
