--- a/templates/game.html
+++ b/templates/game.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Connect-4</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/affinity-css@latest/css/index.css">
   <link rel="stylesheet" href="/static/css/index.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
+  <title>Connect-4</title>
 </head>
 <body class="page">
-    <h1 class="mt-5">Hello World</h1>
-    <form action="{{url_for('chat')}}" method="POST">
-      <div class="form-ctx">
-          <input type="text" class="mt-5"  name="username"  placeholder="Username" autocomplete="off" required autofocus>
-          <input type="text" class="mt-5" name="room" placeholder="Room" autocomplete="off" required>
-          <button value="submit" class="mt-5">Start Chat</button>
-      </div> 
-  </form>
+  <h2 class="mt-5">Connect-4</h2>
+  <div id="board" class="mt-10">
+  </div>
+  <script src="../static/js/counter.js"></script>
 </body>
 </html>
