--- a/templates/game.html
+++ b/templates/game.html
@@ -11,8 +11,22 @@
 </head>
 <body class="page">
   <h2 class="mt-5">Connect-4</h2>
-  <div id="board" class="mt-10">
+  <div class="row-wrap">
+    <div id="board" class="mt-10">
+    </div>
+    <div class="ml-10">
+      <h4>Room : {{ session['room'] }}</h4>
+      <textarea id="chat"cols="50" rows="10" placeholder="No messages yet" readonly></textarea>
+      <input type="text" class="w-100 mt-5" id="text" placeholder="Enter your message here" />
+      <div>
+        <button type="button" class="mt-5" id="send">Send</button>
+        <button type="button" class="mt-5" onclick="leave_room()">
+          Leave this Chat
+        </button>
+      </div>
+    </div>
   </div>
-  <script src="../static/js/counter.js"></script>
+  
+  <script src="../static/js/game.js"></script>
 </body>
 </html>
