--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,7 +28,7 @@ button {
   margin: 10px 0;
 }
 .cell {
-  margin: 0 10px;
+  margin: 10px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
