fix(chat): works finally

--- a/templates/game.html
+++ b/templates/game.html
@@ -10,7 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.6/qs.min.js" integrity="sha512-3TmPrquYLaAsUmZKXRARTDC5siWhLAdBVqNo4dWpDABBtLU62AaoTaQJEvjxjExcZYurO6i1dnK85k8pPIBlRg==" crossorigin="anonymous"></script>
 </body>
 </html>
-
   <title>Game | Connect-4</title>
 </head>
 <body class="page">
@@ -24,8 +23,8 @@
       <input type="text" class="w-100 mt-5" id="chat-input" placeholder="Enter your message here" />
       <div>
         <button type="button" class="mt-5" id="chat-send-btn">Send</button>
-        <button type="button" class="mt-5" onclick="leave_room()">
-          Leave this Chat
+        <button type="button" class="mt-5" id="leave-chat-btn">
+          Leave
         </button>
       </div>
     </div>
