--- a/templates/game.html
+++ b/templates/game.html
@@ -9,7 +9,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.6/qs.min.js" integrity="sha512-3TmPrquYLaAsUmZKXRARTDC5siWhLAdBVqNo4dWpDABBtLU62AaoTaQJEvjxjExcZYurO6i1dnK85k8pPIBlRg==" crossorigin="anonymous"></script>
 </body>
-</html>
   <title>Game | Connect-4</title>
 </head>
 <body class="page">
@@ -22,7 +21,7 @@
       <textarea id="chat-feed" cols="50" rows="10" placeholder="No messages yet" readonly></textarea>
       <input type="text" class="w-100 mt-5" id="chat-input" placeholder="Enter your message here" />
       <div>
-        <button type="button" class="mt-5" id="chat-send-btn">Send</button>
+        <button type="button" class="mt-5 mr-5" id="chat-send-btn">Send</button>
         <button type="button" class="mt-5" id="leave-chat-btn">
           Leave
         </button>
