feat(mode): added light/dark mode

--- a/templates/game.html
+++ b/templates/game.html
@@ -12,7 +12,14 @@
   <title>Game | Connect-4</title>
 </head>
 <body class="page">
-  <h2 class="mt-5">Connect-4</h2>
+  <nav>
+    <h2 class="mt-5">Connect-4</h2>
+    <select name="" id="theme-select">
+      <option value="dark">Dark</option>
+      <option value="light">Light</option>
+    </select>
+  </nav>
+  
   <div class="row-wrap">
     <div id="board" class="mt-10">
     </div>
