--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,18 +6,8 @@
 .w-100 {
   width: 430px;
 }
-select {
-  width: 80px;
-  height: 40px;
-}
-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-}
 .page {
-  max-width: ;
+  max-width: 760px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
