fix(mode): refactor and push styles

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,25 @@
 .row-wrap {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 }
 .w-100 {
   width: 430px;
 }
+select {
+  width: 80px;
+  height: 40px;
+}
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
 .page {
-  max-width: 760px;
+  max-width: 1000px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
