--- a/templates/game.html
+++ b/templates/game.html
@@ -12,7 +12,7 @@
   <title>Game | Connect-4</title>
 </head>
 <body class="page">
-  <nav>
+  <nav class="pl-10 pr-5">
     <h2 class="mt-5">Connect-4</h2>
     <select name="" id="theme-select">
       <option value="dark">Dark</option>
