--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <title>Home | Connect-4</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/affinity-css@latest/css/index.css">
   <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="shortcut icon" href="/static/dark.svg" type="image/x-icon">
 </head>
 <body class="page">
     <h1 class="mt-5">Hello World</h1>
