feat(room): baremodel implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     <h1 class="mt-5">Hello World</h1>
     <form class="form-ctx" action="/game">
       <input type="text" class="mt-5"  name="username"  placeholder="Username" autocomplete="off" required autofocus>
+      <input type="text" class="mt-5"  name="room"  placeholder="Room" autocomplete="off" required autofocus>
       <button type="submit" class="mt-5">Submit</button>
     </form>
 </body>
