--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="/static/dark.svg" type="image/x-icon">
 </head>
 <body class="page">
-    <h1 class="mt-5">Hello World</h1>
+    <h1 class="mt-5">Welcome to Connect-4</h1>
     <form class="form-ctx" action="/game">
       <input type="text" class="mt-5"  name="username"  placeholder="Username" autocomplete="off" required autofocus>
       <input type="text" class="mt-5"  name="room"  placeholder="Room" autocomplete="off" required autofocus>
