--- a/templates/game.html
+++ b/templates/game.html
@@ -31,6 +31,7 @@
       <h4 id="username"></h4>
       <textarea id="chat-feed" cols="50" rows="10" placeholder="No messages yet" readonly></textarea>
       <input type="text" class="w-100 mt-5" id="chat-input" placeholder="Enter your message here" />
+      <audio id="audio" src="../static/media/drop.mp3"></audio>
       <div>
         <button type="button" class="mt-5 mr-5" id="chat-send-btn">Send</button>
         <button type="button" class="mt-5" id="leave-chat-btn">
