--- a/templates/game.html
+++ b/templates/game.html
@@ -37,6 +37,7 @@
         <button type="button" class="mt-5" id="leave-chat-btn">
           Leave
         </button>
+        <button type="button" class="disabled mt-5" id="restart-btn">Play Again</button>
       </div>
     </div>
   </div>
