feat(emai): new email template

--- a/templates/invite.html
+++ b/templates/invite.html
@@ -13,10 +13,10 @@
     <h1 class="mt-5">Send Invite</h1>
     <p class="mt-5">Send invite to your friends and play together!</p>
     <form class="form-ctx" method='POST'>
-      <input type="text" class="mt-5"  name="username"  placeholder="Username" autocomplete="off" required autofocus>
-      <input type="text" class="mt-5"  name="room"  placeholder="Room" autocomplete="off" required autofocus>
-      <input type="text" class="mt-5"  name="i-name"  placeholder="Enter Name" autocomplete="off" required autofocus>
-      <input type="text" class="mt-5"  name="i-email"  placeholder="Enter Email" autocomplete="off" required autofocus>
+      <input type="text" class="mt-5"  name="username"  placeholder="Username"  required autofocus>
+      <input type="text" class="mt-5"  name="room"  placeholder="Room"  required autofocus>
+      <input type="text" class="mt-5"  name="i-name"  placeholder="Enter Name"  required autofocus>
+      <input type="text" class="mt-5"  name="i-email"  placeholder="Enter Email"  required autofocus>
       <button type="submit" class="mt-5">Submit</button>
     </form>
 </body>
