--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,18 @@
   <link rel="shortcut icon" href="/static/dark.svg" type="image/x-icon">
 </head>
 <body class="page">
-    <h1 class="mt-5">Welcome to Connect-4</h1>
+  <h2 class="mt-5 flex-center">
+    Connect
+    <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
+  </h2>
     <form class="form-ctx" action="/game">
       <input type="text" class="mt-5"  name="username"  placeholder="Username" autocomplete="off" required autofocus>
       <input type="text" class="mt-5"  name="room"  placeholder="Room" autocomplete="off" required autofocus>
       <button type="submit" class="mt-5">Submit</button>
     </form>
+    <a class="mt-5" href="/invite">
+      <button>Invite</button>
+    </a>
+    
 </body>
 </html>
