feat(ai): setting up board and template

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
       <input type="text" class="mt-5"  name="room"  placeholder="Room" autocomplete="off" required autofocus>
       <button type="submit" class="mt-5">Submit</button>
     </form>
+    <a class="mt-5" href="/computer">
+      <button>Play with A.I</button>
+    </a>
     <a class="mt-5" href="/invite">
       <button>Invite</button>
     </a>
