feat(AI): computer plays the entire board

--- a/templates/computer.html
+++ b/templates/computer.html
@@ -10,7 +10,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.6/qs.min.js" integrity="sha512-3TmPrquYLaAsUmZKXRARTDC5siWhLAdBVqNo4dWpDABBtLU62AaoTaQJEvjxjExcZYurO6i1dnK85k8pPIBlRg==" crossorigin="anonymous"></script>
 </body>
-  <title>Game | Connect-4</title>
+  <title>Computer | Connect-4</title>
 </head>
 <body class="page">
   <nav class="pl-10 pr-5">
