feat(AI): restart & leave button

--- a/templates/computer.html
+++ b/templates/computer.html
@@ -35,7 +35,7 @@
         <button type="button" class="mt-5" id="leave-chat-btn">
           Leave
         </button>
-        <button type="button" class="disabled mt-5" id="restart-btn">Play Again</button>
+        <button type="button" class=" mt-5" id="restart-btn">Play Again</button>
       </div>
     </div>
   </div>
