--- a/templates/computer.html
+++ b/templates/computer.html
@@ -14,10 +14,12 @@
 </head>
 <body class="page">
   <nav class="pl-10 pr-5">
-    <h2 class="mt-5 flex-center">
-      Connect
-      <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
-    </h2>
+    <a href="/">
+      <h2 class="mt-5 flex-center">
+        Connect
+        <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
+      </h2>
+    </a>
     <select name="" id="theme-select">
       <option value="dark">Dark</option>
       <option value="light">Light</option>
