--- a/templates/invite.html
+++ b/templates/invite.html
@@ -10,10 +10,13 @@
   <link rel="shortcut icon" href="/static/dark.svg" type="image/x-icon">
 </head>
 <body class="page">
+  <a href="/">
     <h2 class="mt-5 flex-center">
       Connect
       <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
     </h2>
+  </a>
+   
     <p class="mt-5">Send invite to your friends and play together!</p>
     <form class="form-ctx" method='POST'>
       <input type="text" class="mt-5"  name="username"  placeholder="Your Username"  required autofocus>
