--- a/templates/sent.html
+++ b/templates/sent.html
@@ -10,10 +10,13 @@
   <link rel="shortcut icon" href="/static/dark.svg" type="image/x-icon">
 </head>
 <body class="page">
-  <h2 class="mt-5 flex-center">
-    Connect
-    <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
-  </h2>
+  <a href="/">
+    <h2 class="mt-5 flex-center">
+      Connect
+      <img id="logo" class="ml-2" src="/static/dark.svg" width="40" alt="">
+    </h2>
+  </a>
+  
     <h1 class="mt-5">Invite Send !</h1>
     <pre><code> {{invite_link}}</code></pre>
     <button class="mt-5">
